<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_orderid"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orderId"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displyorderid"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/text_Name"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displayName"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/text_Address"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displayAddress"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/text_Budget"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Budget"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displayBudget"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/text_Date"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displayDate"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/text_Req"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Requirements"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_displayReq"
        android:textColor="#000"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="130dp"/>


    <Button
        android:id="@+id/button14"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginStart="170dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/createProposal"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:backgroundTint="@color/dogeblu"
        app:cornerRadius="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="5dp"
        android:background="@color/dogeblu" />

</LinearLayout>