<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_pink"
    tools:context=".MainActivity">
<!-- Image-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="283dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        app:srcCompat="@drawable/pic1" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:background="@color/soft_pink"
        android:tint="#040404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/loginc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="241dp"
        android:layout_height="32dp"
        android:background="@color/soft_pink"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_note"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/button"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:shadowColor="#0E0C0C"
        android:text="@string/btn1h"
        android:textAlignment="center"
        app:backgroundTint="@color/darkviolet"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="#0C0C0C" />

    <Button
        android:id="@+id/button2"
        android:layout_width="410dp"
        android:layout_height="78dp"
        android:shadowColor="#0E0C0C"
        android:text="@string/btn2h"
        android:textAlignment="center"
        app:backgroundTint="@color/dogeblu"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:strokeColor="#0C0C0C" />

    <Button
        android:id="@+id/button5"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:shadowColor="#0E0C0C"
        android:text="@string/btn3h"
        android:textAlignment="center"
        app:backgroundTint="@color/darkviolet"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:strokeColor="#0C0C0C" />

    <Button
        android:id="@+id/button6"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:shadowColor="#0E0C0C"
        android:text="@string/btn4h"
        android:textAlignment="center"
        app:backgroundTint="@color/dogeblu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:strokeColor="#0C0C0C" />

</androidx.constraintlayout.widget.ConstraintLayout>